--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 .container{
-   margin-bottom: 50px;
+   margin-bottom: 100px;
 }
-
 .orange-bg{
    background-color: #fceae8;
    border-radius: 10px;
 }
 .carousel-item{
    padding: 20px 40px;
+}
+.col-md-7 h1{
+   font-weight: 500;
 }
 .price{
    color: #ff135f;
@@ -19,4 +21,51 @@
    border-radius: 8px;
    padding: 9px 25px;
    cursor: pointer;
+}
+.cat1, .cat2, .cat3{
+   padding: 10px 30px;
+   margin-top: 90px;
+   border-radius: 10px;
+}
+.cat1{
+   background-color: orange;
+}
+.cat2{
+   background-color: orchid;
+}
+.cat3{
+   background-color: blue;
+}
+.container-categories h1{
+   color: white;
+}
+.container-categories img{
+   width: 100px;
+}
+#shoes h3{
+   font-weight: 600;
+}
+#backpack h3{
+   font-weight: 600;
+}
+.card{
+   border: none;
+   border-radius: 15px;
+   box-shadow: 5px 5px 8px lightgray;
+}
+.card-footer{
+   background-color: rgb(247, 245, 245);
+   border-radius: 15px;
+   
+}
+#subscribe{
+   height: 300px;
+   margin-top: 100px;
+}
+#subscribe h6{
+   color: gray;
+}
+footer{
+   text-align: center;
+
 }
